crates/squealy-macros/tests/compile_fail/doubly_nullable_option.stderr
error: a column type may not be `Option<Option<_>>` (a column is at most nullable once)
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Option<i32> as ColumnNullability>::Nullability == NonNullableColumn`
 --> tests/compile_fail/doubly_nullable_option.rs:9:13
  |
9 |     nested: C::Type<'scope, Option<Option<i32>>>,
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `NonNullableColumn`, found `NullableColumn`
  |
  = note: required for `Option<Option<i32>>` to implement `ColumnNullability`
note: required by a bound in `squealy::ColumnMode::Type`
 --> $WORKSPACE/crates/squealy/src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`
